--- a/package.json
+++ b/package.json
@@ -1,21 +1,55 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "npm start"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "bi_app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "connect-mongo": "^5.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-session": "^1.18.0",
-    "mongoose": "^8.1.3",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "jspdf": "^2.5.1",
+    "plotly.js": "^2.29.1",
+    "postcss": "^8.4.35",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^6.22.1",
+    "react-scripts": "5.0.1",
+    "react-social-login-buttons": "^3.9.1",
+    "react-tooltip": "^5.26.3",
+    "react-whiteboard": "^1.0.0",
+    "reactjs-social-login": "^2.6.3",
+    "tailwindcss": "^3.4.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
